# simple-unix-chat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  cmake_install.cmake
client/: ChatRoom.cpp  ChatRoom.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
common/: Connection.cpp  Connection.hpp
server/: ClientConnection.cpp  ClientConnection.hpp  Server.cpp  Server.hpp  main.cpp
